@@ -237,7 +237,6 @@ var FireGPG_GPGLin = {
 
 		return result2;
 	}
-
 };
 
-// vim:ai:noet:sw=4:ts=4:sts=4:tw=0:fenc=utf-8
+// vim:ai:noet:sw=4:ts=4:sts=4:tw=0:fenc=utf-8:foldmethod=indent:
